--- a/client/compiled/index.html
+++ b/client/compiled/index.html
@@ -12,10 +12,31 @@
 </head>
 <body>
 	<div id="App">
-		
-
-
 	</div>
+
+<!--   <div class='cont'>
+    
+    <div class="dropdown">
+      <ul>
+        <li>hello
+          <ul class="sublist">
+            <li>nizar</li>
+            <li>ca va</li>
+            <li>cool oui</li>
+            <li>et toi?</li>
+          </ul>
+        </li>
+        <li>there
+          <ul class="sublist">
+            <li>cool oui</li>
+            <li>et toi?</li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+
+
+  </div> -->
 
 <script src="./compiled/bundle.js"></script>
 </body>
