--- a/client/index.html
+++ b/client/index.html
@@ -5,17 +5,39 @@
 	<title>My personal website</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="apple-mobile-web-app-capable" content="yes">
+  
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,700|Montserrat:400,700' rel='stylesheet' type='text/css'>
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
+  <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,700|Montserrat:400,700' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700" rel="stylesheet">
 </head>
 <body>
 	<div id="App">
-		
-
-
 	</div>
+
+<!--   <div class='cont'>
+    
+    <div class="dropdown">
+      <ul>
+        <li>hello
+          <ul class="sublist">
+            <li>nizar</li>
+            <li>ca va</li>
+            <li>cool oui</li>
+            <li>et toi?</li>
+          </ul>
+        </li>
+        <li>there
+          <ul class="sublist">
+            <li>cool oui</li>
+            <li>et toi?</li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+
+
+  </div> -->
 
 <script src="./compiled/bundle.js"></script>
 </body>
