[views]work section

--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,7 @@
 <body>
 	<div id="App">
 	</div>
-  <!-- <i class="ion ion-checkmark-circled"></i> -->
+  <!-- <i class="ion-ios-search"></i> -->
 
 <!--   <div class='cont'>
     
