[refactor] cleaning console.log and comments

--- a/client/index.html
+++ b/client/index.html
@@ -13,34 +13,7 @@
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900i" rel="stylesheet">
 </head>
 <body>
-	<div id="App">
-	</div>
-  <!-- <i class="ion-ios-search"></i> -->
-
-<!--   <div class='cont'>
-    
-    <div class="dropdown">
-      <ul>
-        <li>hello
-          <ul class="sublist">
-            <li>nizar</li>
-            <li>ca va</li>
-            <li>cool oui</li>
-            <li>et toi?</li>
-          </ul>
-        </li>
-        <li>there
-          <ul class="sublist">
-            <li>cool oui</li>
-            <li>et toi?</li>
-          </ul>
-        </li>
-      </ul>
-    </div>
-
-
-  </div> -->
-
+	<div id="App"></div>
 <script src="dist/bundle.js"></script>
 </body>
 </html>
