--- a/client/index.html
+++ b/client/index.html
@@ -14,6 +14,6 @@
 </head>
 <body>
 	<div id="App"></div>
-<script src="dist/bundle.js"></script>
+<script src="./dist/bundle.js"></script>
 </body>
 </html>
