[deploy]added meta tag for social network sharing

--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,15 @@
   <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,700|Montserrat:400,700' rel='stylesheet' type='text/css'>
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900i" rel="stylesheet">
+
+  <meta property='og:title' content='Nizar Ayari Portfolio'/>
+  <meta property='og:image' content='https://s3-us-west-2.amazonaws.com/mymealmks/header.png'/>
+  <meta property='og:description' content='Here is my portfolio that showcases my previous work'/>
+  <meta property='og:url' content='www.nizarayari.com' />
+
+
+
+
 </head>
 <body>
 	<div id="App"></div>
