[deploy] added open graph meta tag

--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: http://ogp.me/ns#">
 <head>
 	<meta charset="UTF-8">
 	<title>Nizar Ayari portfolio</title>
@@ -15,7 +15,7 @@
   <meta property='og:title' content='Nizar Ayari Portfolio'/>
   <meta property='og:image' content='https://s3-us-west-2.amazonaws.com/mymealmks/header.png'/>
   <meta property='og:description' content='Here is my portfolio that showcases my previous work'/>
-  <meta property='og:url' content='www.nizarayari.com' />
+  <meta property='og:url' content='http://www.nizarayari.com' />
 
 
 
